syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smoketurner.snowizard.grpc.protos";
option java_outer_classname = "SnowizardProtos";

package snowizard;

import "google/protobuf/empty.proto";

service Snowizard {
  rpc GetId (google.protobuf.Empty) returns (SnowizardResponse);
  rpc GetIds (SnowizardRequest) returns (stream SnowizardResponse);
}

message SnowizardRequest {
  int32 count = 1;
}

message SnowizardResponse {
  repeated int64 id = 1;
}